objects/Job_Detail_Tab_Controls__c/Job_Detail_Tab_Controls__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Job Cost Tab in job detail page.</description>
    <label>Job Detail Tab Controls</label>
</CustomObject>