objects/Job_Detail_Tab_Controls__c/fields/Disable_Chatter__c.field-meta.xml
<CustomField>
    <fullName>Disable_Chatter__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable Chatter</label>
    <type>Checkbox</type>
</CustomField>