objects/Job_Detail_Tab_Controls__c/fields/Disable_Job_Cost_Tab__c.field-meta.xml
<CustomField>
    <fullName>Disable_Job_Cost_Tab__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable Job Cost Tab</label>
    <type>Checkbox</type>
</CustomField>