objects/Job_Detail_Tab_Controls__c/fields/Disable_Quip__c.field-meta.xml
<CustomField>
    <fullName>Disable_Quip__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Disable Quip</label>
    <type>Checkbox</type>
</CustomField>