objects/Job_Detail_Tab_Controls__c/fields/Disable_Quip_Section__c.field-meta.xml
<CustomField>
    <fullName>Disable_Quip_Section__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Disable Quip Section</label>
    <type>Checkbox</type>
</CustomField>