objects/Job_Detail_Tab_Controls__c/fields/Enable_WorkDocs__c.field-meta.xml
<CustomField>
    <fullName>Enable_WorkDocs__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable WorkDocs</label>
    <type>Checkbox</type>
</CustomField>